# eruditio

./: .gitattributes  .gitignore  Cargo.toml  README.md  test_fb2.xml  test_lit_calibre.py  test_xml.rs
.github/workflows/: ci.yml  pages.yml
benches/: conversion.rs  intrinsics.rs  intrinsics_integration.rs  mobi_roundtrip.rs  palmdoc.rs  rtf_tokenizer.rs
crates/eruditio/: Cargo.toml
crates/eruditio-wasm/: Cargo.toml
crates/eruditio-wasm/src/: lib.rs
crates/eruditio/benches/: conversion.rs  html_escape.rs
crates/eruditio/src/: error.rs  lib.rs  parser.rs
crates/eruditio/src/domain/: book.rs  load_filter.rs  manifest.rs  mod.rs  spine.rs  traits.rs
crates/eruditio/src/formats/: azw4.rs  cb7.rs  cbz.rs  fb2.rs  htmlz.rs  kepub.rs  md.rs  mod.rs  oeb.rs  pdb.rs  pdf.rs  rb.rs  snb.rs  tcr.rs  txt.rs  txtz.rs
crates/eruditio/src/pipeline/: convert.rs  options.rs
crates/eruditio/src/transforms/: cover_handler.rs  data_uri_extractor.rs  manifest_trimmer.rs  metadata_merger.rs  structure_detector.rs  toc_generator.rs
crates/eruditio/tests/: test_cjk_ebooks.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_format_readers.rs  fuzz_html_parser.rs  fuzz_palmdoc.rs  fuzz_pml_parser.rs  fuzz_rtf_tokenizer.rs  fuzz_text_utils.rs
scripts/: generate_plots.py
src/: bin_test.rs  error.rs  lib.rs  parser.rs
src/domain/: book.rs  format.rs  guide.rs  load_filter.rs  manifest.rs  metadata.rs  mod.rs  toc.rs  traits.rs
src/formats/: azw4.rs  cb7.rs  cbc.rs  cbr.rs  cbz.rs  fb2.rs  fbz.rs  htmlz.rs  kepub.rs  md.rs  mod.rs  oeb.rs  pdb.rs  pdf.rs  pmlz.rs  rb.rs  snb.rs  tcr.rs  txt.rs  txtz.rs
src/formats/chm/: mod.rs
src/formats/common/: html_utils.rs  itss.rs  mod.rs  palm_db.rs  text_utils.rs  xml_utils.rs  zip_utils.rs
src/formats/common/compression/: huffcdic.rs  palmdoc.rs
src/formats/common/intrinsics/: byte_scan.rs  case_fold.rs  cp1252.rs  hex_decode.rs  histogram.rs  is_ascii.rs  match_length.rs  mod.rs  short_pattern.rs  skip_ws.rs
src/formats/djvu/: bzz.rs  mod.rs
src/formats/epub/: container.rs  content.rs  mimetype.rs  mod.rs  nav.rs  ncx.rs  opf.rs  writer.rs
src/formats/html/: mod.rs  parser.rs
src/formats/lit/: maps.rs  mod.rs  msdes.rs  mssha1.rs  unbinary.rs  writer.rs
src/formats/lrf/: header.rs  mod.rs  objects.rs  tags.rs  text.rs  writer.rs
src/formats/mobi/: exth.rs  header.rs  mod.rs  writer.rs
src/formats/pml/: mod.rs  parser.rs
src/formats/rtf/: mod.rs  tokenizer.rs  writer.rs
src/pipeline/: convert.rs  load_filter.rs  mod.rs  options.rs  registry.rs
src/transforms/: cover_handler.rs  data_uri_extractor.rs  html_normalizer.rs  manifest_trimmer.rs  metadata_merger.rs  mod.rs  structure_detector.rs  toc_generator.rs
test-data/compliance/: CHECKSUMS.sha256
test-data/compliance/idpf-epub30/: epub30-test-0100.epub  epub30-test-0101.epub  epub30-test-0102.epub  epub30-test-0103.epub  epub30-test-0110.epub  epub30-test-0111.epub  epub30-test-0112.epub  epub30-test-0130.epub  epub30-test-0140.epub  epub30-test-0150.epub  epub30-test-0201.epub  epub30-test-0202.epub  epub30-test-0203.epub  epub30-test-0204.epub  epub30-test-0205.epub  epub30-test-0206.epub  epub30-test-0207.epub  epub30-test-0208.epub  epub30-test-0209.epub  epub30-test-0210.epub  epub30-test-0211.epub
test-data/compliance/w3c-epub33/valid/: cnt-css-fonts_ot.epub  cnt-css-fonts_tt.epub  cnt-css-fonts_woff.epub  cnt-css-fonts_woff2.epub  cnt-mathml-support.epub  cnt-svg-css-inclusion.epub  cnt-svg-css-reference.epub  cnt-svg-css.epub  cnt-svg-embedded.epub  cnt-svg-support.epub  cnt-xhtml-support.epub  css-epub-hyphens.epub  css-epub-line-break.epub  (+165 more)
test-data/real-world/medium/: 28languages.epub  AChristmasCarolAudioBook.epub  pg23962-images-kf8.mobi  pg23962-images.epub  pg23962-images.mobi  sample_marketing_strategies.mobi  test_large_12pages.cbr  test_mixed_formats.cb7
test-data/real-world/small/: emma.html  metamorphosis.html  pg-anna-karenina.epub  pg-black-beauty.epub  pg-brothers-karamazov.epub  pg-count-monte-cristo.epub  pg-crime-and-punishment.epub  pg-divine-comedy.epub  pg-don-quixote.epub  pg-first-men-in-moon.epub  pg-great-expectations.epub  pg-gulliver-travels.epub  pg-heidi.epub  pg-iliad.epub  pg-jane-eyre.epub  pg-les-miserables.epub  pg-madame-bovary.epub  pg-peter-pan.epub  pg-pride-and-prejudice.epub  pg-secret-garden.epub  pg-ulysses.epub  pg-war-and-peace.epub  pg-war-of-worlds.epub  pg31757-images-3.epub  pg31757-images-kf8.mobi  pg31757-images.epub  pg31757-images.mobi  pg31757.epub  picture_of_dorian_gray.html
tests/: memory.rs  test_cbz.rs  test_compliance_epub.rs  test_edge_cases.rs  test_epub.rs  test_fb2.rs  test_format_gaps.rs  test_mobi.rs  test_phase7_formats.rs  test_pipeline.rs  test_realworld_epub.rs  test_realworld_formats.rs  test_realworld_html.rs  test_tcr.rs  test_txt.rs
web/: build-wasm.sh  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.svelte  app.css
web/src/lib/: types.ts  worker.ts
(+64 files in other folders)
