[package]
name = "eruditio"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bzip2 = "0.6.1"
chrono = "0.4.43"
flate2 = "1.1"
log = "0.4.29"
memchr = "2"
mime = "0.3.17"
mime_guess = "2.0.5"
quick-xml = "0.39.2"
sevenz-rust2 = { version = "0.20", optional = true }
thiserror = "2.0.18"
unrar = { version = "0.5", optional = true }
zip = "8.1.0"
lzxd = "0.2"
pulldown-cmark = "0.12"
encoding_rs = "0.8"

[features]
default = ["native-fs", "cbr", "cb7"]
native-fs = []
cbr = ["dep:unrar", "native-fs"]
cb7 = ["dep:sevenz-rust2"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "palmdoc"
harness = false

[[bench]]
name = "html_escape"
harness = false

[[bench]]
name = "rtf_tokenizer"
harness = false

[[bench]]
name = "mobi_roundtrip"
harness = false

[[bench]]
name = "intrinsics"
harness = false

[[bench]]
name = "intrinsics_integration"
harness = false
